change the weather

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <button id="search-city">搜索</button>
             </div>
         </div>
-        <div class="today">
+        <div class="now">
             <div class="word">
                 <div class="summerize">
-                    <span id="today-temperture">10°</span>
-                    <span id="today-weather">阴</span>
+                    <span id="now-temp">10°</span>
+                    <span id="now-weather">阴</span>
                 </div>
-                <div class="today-detail">
+                <div class="now-detail">
                     <span id="wind-icon"></span>
                     <span id="wind">北风&nbsp;两级</span>
                     <span id="humidity-icon"></span>
