--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="city-container">
                 <span class="position-icon"></span>
                 <span id="now-city">广西&nbsp;梧州</span>
-                <input id="input" type="input" placeholder="江苏 南京">
+                <input id="input" type="input" value = "广西 梧州"placeholder="广西 梧州">
                 <button id="search-city">搜索</button>
             </div>
         </div>
@@ -29,16 +29,16 @@
                 </div>
                 <div class="now-detail">
                     <span id="wind-icon"></span>
-                    <span id="wind">北风&nbsp;两级</span>
+                    <span id="wind">北风&nbsp;2级</span>
                     <span id="humidity-icon"></span>
                     <span id="humidity">湿度&nbsp;71%</span>
                     <span id="baro-icon"></span>
                     <span id="baro">气压&nbsp;1009.0hPa</span>
                 </div>
-                <div class="one-sentence">
+                <div class="tips">
                     <span>●</span>
-                    <span id="sentence">梦比现实更易侵蚀人的精神，刻意准备的梦是危险的。</span>
-                    <span id="sentence-key"></span>
+                    <span id="tip">光芒透过云缝，洒向大地~</span>
+                    <span id="tips-key"></span>
                 </div>
             </div>
             <img id="weather-icon" src="/images/Cloudy(134x134).png">
