--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="city-container">
                 <span class="position-icon"></span>
                 <span id="now-city">广西&nbsp;梧州</span>
-                <input id="input" type="input" value = "广西 梧州"placeholder="广西 梧州">
+                <input id="input" type="input" value = "广西 梧州 长洲区"placeholder="广西 梧州 长洲区">
                 <button id="search-city">搜索</button>
             </div>
         </div>
@@ -48,64 +48,64 @@
                 <div id="hours-title">●&nbsp;逐小时预报</div>
                 <div id="hours">
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="0time">14:00</div>
+                        <img class="hours-icon"id="0icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="0degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time" id="1time">14:00</div>
+                        <img class="hours-icon" id="1icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture" id="1degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time" id="2time">14:00</div>
+                        <img class="hours-icon" id="2icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture" id="2degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time" id="3time">14:00</div>
+                        <img class="hours-icon" id="3icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="3degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="4time">14:00</div>
+                        <img class="hours-icon"id="4icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="4degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="5time">14:00</div>
+                        <img class="hours-icon"id="5icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="5degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="6time">14:00</div>
+                        <img class="hours-icon"id="6icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="6degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="7time">14:00</div>
+                        <img class="hours-icon"id="7icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="7degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="8time">14:00</div>
+                        <img class="hours-icon"id="8icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="8degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="9time">14:00</div>
+                        <img class="hours-icon"id="9icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="9degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon"src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="10time">14:00</div>
+                        <img class="hours-icon"id="10icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="10degree">11℃</div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time">14:00</div>
-                        <img class="hours-icon" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture">11℃</div>
+                        <div class="hours-time"id="11time">14:00</div>
+                        <img class="hours-icon"id="11icon" src="/images/Cloudy(60x60).png">
+                        <div class="hours-tempture"id="11degree">11℃</div>
                     </div>
                 </div>
             </div>
