--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         </div>
         <div class="detail">
             <div class="detail-container" id="hours-container">
-                <div id="hours-title">●&nbsp;逐小时预报</div>
+                <div id="hours-title-container">
+                    <div id="hours-title">●&nbsp;逐小时预报</div>
+                    <div id="hours-down"></div>
+                    <div id="hours-up"></div>
+                </div>
                 <div id="hours">
                     <div class="hours">
                         <div class="hours-time"id="time0">14:00</div>
