--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="/images/logo.png" class="logo">
             <div class="city-container">
                 <span class="position-icon"></span>
-                <span id="now-city">广西&nbsp;梧州</span>
+                <span id="now-city"></span>
                 <input id="input" type="input" value = "广西 梧州 长洲区"placeholder="广西 梧州 长洲区">
                 <button id="search-city">搜索</button>
             </div>
@@ -24,12 +24,12 @@
         <div class="now">
             <div class="word">
                 <div class="summerize">
-                    <span id="now-temp">10°</span>
-                    <span id="now-weather">阴</span>
+                    <span id="now-temp"></span>
+                    <span id="now-weather"></span>
                 </div>
                 <div class="now-detail">
                     <span id="wind-icon"></span>
-                    <span id="wind">北风&nbsp;2级</span>
+                    <span id="wind"></span>
                     <span id="humidity-icon"></span>
                     <span id="humidity">湿度&nbsp;71%</span>
                     <span id="baro-icon"></span>
@@ -37,11 +37,11 @@
                 </div>
                 <div class="tips">
                     <span>●</span>
-                    <span id="tip">光芒透过云缝，洒向大地~</span>
+                    <span id="tip"></span>
                     <span id="tips-key"></span>
                 </div>
             </div>
-            <img id="weather-icon" src="/images/Cloudy(134x134).png">
+            <img id="weather-icon" >
         </div>
         <div class="detail">
             <div class="detail-container" id="hours-container">
@@ -52,64 +52,64 @@
                 </div>
                 <div id="hours">
                     <div class="hours">
-                        <div class="hours-time"id="time0">14:00</div>
-                        <img class="hours-icon"id="icon0" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree0">11℃</div>
+                        <div class="hours-time"id="time0"></div>
+                        <img class="hours-icon"id="icon0">
+                        <div class="hours-tempture"id="degree0"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time" id="time1">14:00</div>
-                        <img class="hours-icon" id="icon1" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture" id="degree1">11℃</div>
+                        <div class="hours-time" id="time1"></div>
+                        <img class="hours-icon" id="icon1">
+                        <div class="hours-tempture" id="degree1"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time" id="time2">14:00</div>
-                        <img class="hours-icon" id="icon2" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture" id="degree2">11℃</div>
+                        <div class="hours-time" id="time2"></div>
+                        <img class="hours-icon" id="icon2">
+                        <div class="hours-tempture" id="degree2"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time" id="time3">14:00</div>
-                        <img class="hours-icon" id="icon3" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree3">11℃</div>
+                        <div class="hours-time" id="time3"></div>
+                        <img class="hours-icon" id="icon3">
+                        <div class="hours-tempture"id="degree3"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time4">14:00</div>
-                        <img class="hours-icon"id="icon4" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree4">11℃</div>
+                        <div class="hours-time"id="time4"></div>
+                        <img class="hours-icon"id="icon4">
+                        <div class="hours-tempture"id="degree4"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time5">14:00</div>
-                        <img class="hours-icon"id="icon5" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree5">11℃</div>
+                        <div class="hours-time"id="time5"></div>
+                        <img class="hours-icon"id="icon5">
+                        <div class="hours-tempture"id="degree5"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time6">14:00</div>
-                        <img class="hours-icon"id="icon6" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree6">11℃</div>
+                        <div class="hours-time"id="time6"></div>
+                        <img class="hours-icon"id="icon6">
+                        <div class="hours-tempture"id="degree6"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time7">14:00</div>
-                        <img class="hours-icon"id="icon7" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree7">11℃</div>
+                        <div class="hours-time"id="time7"></div>
+                        <img class="hours-icon"id="icon7">
+                        <div class="hours-tempture"id="degree7"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time8">14:00</div>
-                        <img class="hours-icon"id="icon8" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree8">11℃</div>
+                        <div class="hours-time"id="time8"></div>
+                        <img class="hours-icon"id="icon8">
+                        <div class="hours-tempture"id="degree8"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time9">14:00</div>
-                        <img class="hours-icon"id="icon9" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree9">11℃</div>
+                        <div class="hours-time"id="time9"></div>
+                        <img class="hours-icon"id="icon9">
+                        <div class="hours-tempture"id="degree9"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time10">14:00</div>
-                        <img class="hours-icon"id="icon10" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree10">11℃</div>
+                        <div class="hours-time"id="time10"></div>
+                        <img class="hours-icon"id="icon10">
+                        <div class="hours-tempture"id="degree10"></div>
                     </div>
                     <div class="hours">
-                        <div class="hours-time"id="time11">14:00</div>
-                        <img class="hours-icon"id="icon11" src="/images/Cloudy(60x60).png">
-                        <div class="hours-tempture"id="degree11">11℃</div>
+                        <div class="hours-time"id="time11"></div>
+                        <img class="hours-icon"id="icon11">
+                        <div class="hours-tempture"id="degree11"></div>
                     </div>
                 </div>
             </div>
