--- a/index.html
+++ b/index.html
@@ -114,7 +114,81 @@
                 </div>
             </div>
             <div class="detail-container" id="week-container">
-
+                <div id="week-title">●&nbsp;7日天气预报</div>
+                <ol>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days">
+                        <div class="day">昨天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="24h-wind">北风&nbsp;3级</div>
+                    </li>
+                </ol>
             </div>
             <div id="livingIndex-container">
                 <div id="livingIndex-title">●&nbsp;生活指数</div>
