--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="city-container">
                 <span class="position-icon"></span>
                 <span id="now-city"></span>
-                <input id="input" type="input" value = "广西 梧州 长洲区"placeholder="广西 梧州 长洲区">
+                <input id="input" type="input" value = "广西 梧州 藤县"placeholder="广西 梧州 藤县">
                 <button id="search-city">搜索</button>
             </div>
         </div>
@@ -123,7 +123,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -132,7 +132,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -141,7 +141,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -150,7 +150,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -159,7 +159,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -168,7 +168,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -177,7 +177,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                     <li class="days">
                         <div class="day">昨天</div>
@@ -186,7 +186,7 @@
                         <img class="day-icon" src="/icon/little/day/00.png"></img>
                         <img class="night-icon" src="/icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
-                        <div class="24h-wind">北风&nbsp;3级</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
                 </ol>
             </div>
