week-container is done except line chart

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="detail-container" id="week-container">
                 <div id="week-title">●&nbsp;7日天气预报</div>
                 <ol>
-                    <li class="days">
+                    <li class="days" id="day0">
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
@@ -125,7 +125,34 @@
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
-                    <li class="days">
+                    <li class="days" id="day1">
+                        <div class="day">今天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days" id="day2">
+                        <div class="day">明天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days" id="day3">
+                        <div class="day">后天</div>
+                        <div class="date">01月25日</div>
+                        <div class="day-weather">小雨</div>
+                        <img class="day-icon" src="/icon/little/day/00.png"></img>
+                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <div class="night-weather">小雨</div>
+                        <div class="wind-24h">北风&nbsp;3级</div>
+                    </li>
+                    <li class="days" id="day4">
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
@@ -134,7 +161,7 @@
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
-                    <li class="days">
+                    <li class="days" id="day5">
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
@@ -143,7 +170,7 @@
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
-                    <li class="days">
+                    <li class="days" id="day6">
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
@@ -152,34 +179,7 @@
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
-                    <li class="days">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days">
+                    <li class="days" id="day7">
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
