--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-container">
         <div class="top-container">
-            <img src="/images/logo.png" class="logo">
+            <img src="./images/logo.png" class="logo">
             <div class="city-container">
                 <span class="position-icon"></span>
                 <span id="now-city"></span>
